# cryap

./: .env  .gitignore  Cargo.toml  FEDERATION.md  Justfile  README.md  config.toml.example  docker-compose.yml  docker-compose.yml.dev  flake.nix  mkdocs.yml  rustfmt.toml  shell.nix
.woodpecker/: docs-deploy.yaml
crates/ap/: Cargo.toml
crates/ap/src/: lib.rs  middleware.rs
crates/ap/src/activities/: announce.rs  follow.rs  like.rs  mod.rs  update.rs
crates/ap/src/activities/accept/: follow.rs
crates/ap/src/activities/create/: note.rs
crates/ap/src/activities/reject/: follow.rs
crates/ap/src/activities/undo/: announce.rs  follow.rs  like.rs
crates/ap/src/common/: follows.rs  mod.rs  nodeinfo.rs  notifications.rs  streaming.rs  users.rs
crates/ap/src/objects/: announce.rs  mod.rs  note.rs  ordered_collection.rs  service_actor.rs  user.rs
crates/ap/src/routers/: activitypub.rs  mod.rs  nodeinfo.rs  posts.rs  users.rs  webfinger.rs
crates/api/: Cargo.toml
crates/api/src/: auth_middleware.rs  error.rs  lib.rs
crates/api/src/common/: follows.rs  mod.rs  posts.rs  users.rs
crates/api/src/entities/: account.rs  application.rs  instance_v1.rs  instance_v2.rs  mod.rs  notification.rs  relationship.rs  rule.rs  status.rs
crates/api/src/routers/: accounts.rs  apps.rs  auth.rs  instance.rs  mod.rs  notifications.rs  statuses.rs  timelines.rs
crates/api/src/routers/accounts/: bookmarks.rs  favourites.rs  follow_requests.rs  mod.rs
crates/api/src/routers/apps/: mod.rs  oauth.rs
crates/api/src/routers/timelines/: mod.rs  streaming.rs
crates/api/src/routers/ui/: auth.rs  mod.rs
crates/api/templates/: authorize.html  code_display.html  sign_in.html
crates/db/: Cargo.toml
crates/db/migrations/2023-06-14-081141_create_users/: up.sql
crates/db/migrations/2023-06-15-170433_user_followers/: down.sql  up.sql
crates/db/migrations/2023-07-06-185529_user_follow_requests/: down.sql  up.sql
crates/db/migrations/2023-07-13-163935_create_sessions/: up.sql
crates/db/migrations/2023-07-16-151256_posts/: down.sql  up.sql
crates/db/migrations/2023-07-18-181209_likes_and_boosts/: down.sql  up.sql
crates/db/migrations/2023-07-19-111738_save_activity_id/: down.sql  up.sql
crates/db/migrations/2023-07-21-204021_manually_approves_followers/: down.sql  up.sql
crates/db/migrations/2023-07-24-131836_applications/: up.sql
crates/db/migrations/2023-07-27-170858_application_id_in_session/: down.sql  up.sql
crates/db/migrations/2023-08-17-181517_notifications/: down.sql  up.sql
crates/db/migrations/2023-09-08-143041_bookmarks/: down.sql  up.sql
crates/db/migrations/2023-09-13-143319_private_notes/: down.sql  up.sql
crates/db/migrations/2023-10-12-202528_is_cat/: down.sql  up.sql
crates/db/migrations/2023-10-13-151505_bots/: down.sql  up.sql
crates/db/migrations/2023-11-29-204157_timezone-awareness/: down.sql  up.sql
crates/db/migrations/2024-04-19-170259_received_activities/: down.sql  up.sql
crates/db/migrations/2024-04-21-124653_optional_ap_id_in_post_like/: down.sql  up.sql
crates/db/migrations/2025-06-29-211313_save_user_stats/: down.sql  up.sql
crates/db/src/: lib.rs  migrations.rs  pagination.rs  schema.rs  types.rs  utils.rs
crates/db/src/common/: mod.rs  nodeinfo.rs  timelines.rs
crates/db/src/models/: activities.rs  application.rs  bookmark.rs  interactions.rs  mod.rs  notification.rs  post.rs  post_boost.rs  post_like.rs  private_note.rs  redirect_code.rs  session.rs  user.rs  user_follow_request.rs  user_follow_requests.rs  user_follower.rs  user_followers.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: lib.rs  main.rs
crates/frontend/src/components/: app.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/rpc/src/commands/: mod.rs  register.rs  userfetch.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs  users.rs
crates/web/src/ap/activities/: announce.rs  follow.rs  like.rs  mod.rs
crates/web/src/ap/activities/accept/: follow.rs
crates/web/src/ap/activities/create/: note.rs
crates/web/src/ap/activities/reject/: follow.rs
crates/web/src/ap/activities/undo/: announce.rs  follow.rs  like.rs  mod.rs
crates/web/src/ap/objects/: image.rs  mod.rs  note.rs  service_actor.rs  user.rs
crates/web/src/api/: auth_middleware.rs  mod.rs
crates/web/src/api/entities/: account.rs  mod.rs  relationship.rs  token.rs
crates/web/src/common/: follows.rs  users.rs
crates/web/src/routers/: activitypub.rs  auth.rs  middleware.rs  mod.rs  users.rs
crates/web/src/routers/api/: accounts.rs  apps.rs  mod.rs
crates/web/src/rpc/: mod.rs
crates/web/src/rpc/commands/: mod.rs  register.rs
docs/: _redirects  client_api.md  federation.md  index.md
docs/administation/: rpc.md
docs/development/: architecture.md  building_release.md  getting_started.md
docs/extend/: main.html
docs/setup/: configuration.md  installation.md
docs/setup/linux/: systemd.md
src/: config.rs  frontend.rs  main.rs  router.rs
src/routers/: mod.rs
src/rpc/: mod.rs
src/rpc/commands/: register.rs  userfetch.rs
