[workspace]
members = [
    "crates/ap",
    "crates/api",
    "crates/db",
    "crates/web",
    "crates/rpc"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "cryap"
version.workspace = true
edition.workspace = true
default-run = "cryap"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["multipart", "ws", "headers", "macros"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
env_logger = "0.10.0"
listenfd = "1.0.1"
log = "0.4.18"
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
db = { path = "crates/db" }
ap = { path = "crates/ap" }
api = { path = "crates/api" }
web = { path = "crates/web" }
rpc = { path = "crates/rpc" }
diesel = { version = "2.1.0", features = ["postgres", "url", "without-deprecated", "serde_json", "chrono", "nightly-error-messages"] }
time = { version = "0.3.23" }
serde_json = "1.0.97"
activitypub_federation = { git = "https://github.com/LemmyNet/activitypub-federation-rust.git" , default-features = false, features = ["axum"] }
async-trait = "0.1.68"
url = { version = "2.4.0", features = ["serde"] }
enum_delegate = "0.2.0"
serde_with = { version = "3.0.0", features = ["json"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
redis = { version = "0.23.0", features = ["tokio-comp", "aio", "connection-manager", "r2d2", "rand"] }
toml = "0.7.6"
