[workspace]
members = [
  "crates/ap",
  "crates/api",
  "crates/db",
  "crates/web",
  #"crates/frontend",
  "crates/rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://codeberg.org/cryap/cryap"
homepage = "https://cryap.codeberg.page"

[package]
name = "cryap"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
default-run = "cryap"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = [
  "multipart",
  "ws",
  "headers",
  "macros",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
env_logger = "0.11.3"
listenfd = "1.0.1"
log = "0.4.18"
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
db = { path = "crates/db" }
ap = { path = "crates/ap" }
api = { path = "crates/api" }
web = { path = "crates/web" }
rpc = { path = "crates/rpc" }
#frontend = { default-features = false, features = [
#  "ssr",
#], path = "crates/frontend" }
diesel = { version = "2.1.0", features = [
  "postgres",
  "url",
  "without-deprecated",
  "serde_json",
  "chrono",
  "nightly-error-messages",
] }
serde_json = "1.0.97"
activitypub_federation = { version = "0.5.4", default-features = false, features = [
  "axum",
] }
async-trait = "0.1.68"
url = { version = "2.4.0", features = ["serde"] }
enum_delegate = "0.2.0"
serde_with = { version = "3.0.0", features = ["json"] }
tower-http = { version = "0.4.1", features = [
  "fs",
  "trace",
  "cors",
  "normalize-path",
] }
redis = { version = "0.25.3", features = [
  "tokio-comp",
  "aio",
  "connection-manager",
  "r2d2",
  "rand",
] }
toml = "0.8.14"
rust-embed = { version = "8.3.0", features = [
  "include-flate",
  "interpolate-folder-path",
  "axum-ex",
] }
mime_guess = "2.0.4"
tokio-util = { version = "0.7.8", features = ["rt"] }
http = "0.2.9"
tower-layer = "0.3.2"
