[package]
name = "ap"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["multipart", "ws", "headers", "macros"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.18"
serde = "1.0.163"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
db = { path = "../db" }
web = { path = "../web" }
diesel = { version = "2.1.0", features = ["postgres", "url", "without-deprecated", "serde_json", "chrono", "nightly-error-messages"] }
chrono = { version = "0.4.26", features = ["serde"] }
time = { version = "0.3.23" }
serde_json = "1.0.97"
activitypub_federation = { git = "https://github.com/LemmyNet/activitypub-federation-rust.git" , default-features = false, features = ["axum"] }
async-trait = "0.1.68"
url = { version = "2.4.0", features = ["serde"] }
enum_delegate = "0.2.0"
serde_with = { version = "3.0.0", features = ["json"] }
argon2 = "0.5.1"
