[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "url", "without-deprecated", "serde_json", "chrono", "nightly-error-messages"] }
diesel-async = "0.3.1"
diesel_async_migrations = { git = "https://github.com/niroco/diesel_async_migrations" }
anyhow = "1.0.71"
typed-builder = "0.14.0"
diesel-derive-newtype = "2.0.0-rc.0"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.5"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
