[package]
name = "db"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.5", features = [
  "postgres",
  "url",
  "without-deprecated",
  "serde_json",
  "chrono",
  "nightly-error-messages",
] }
diesel-async = { version = "0.4.1", features = ["deadpool"] }
diesel_async_migrations = { git = "https://github.com/niroco/diesel_async_migrations" }
anyhow = "1.0.71"
diesel-derive-newtype = "2.1.1"
svix-ksuid = { version = "0.8.0", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.5"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
redis = { version = "0.25.3", features = [
  "tokio-comp",
  "aio",
  "connection-manager",
  "r2d2",
  "rand",
] }
serde = { version = "1.0.178", features = ["serde_derive"] }
