[package]
name = "rpc"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = [
  "multipart",
  "ws",
  "headers",
  "macros",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.18"
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
api = { path = "../api" }
ap = { path = "../ap" }
web = { path = "../web" }
diesel = { version = "2.1.0", features = [
  "postgres",
  "url",
  "without-deprecated",
  "serde_json",
  "chrono",
  "nightly-error-messages",
] }
time = { version = "0.3.23" }
serde_json = "1.0.97"
activitypub_federation = { version = "=0.5.0-beta.1", default-features = false, features = [
  "axum",
] }
async-trait = "0.1.68"
